--- a/send_data.html
+++ b/send_data.html
@@ -77,43 +77,44 @@ function render()
 
 }
 var request = {
-	id:
-	i1: localStorage.getItem("i_1"),
-i2: localStorage.getItem("i_2"),
-i3: localStorage.getItem("i_3"),
-i4: localStorage.getItem("i_4"),
-i5: localStorage.getItem("i_5"),
-i6: localStorage.getItem("i_6"),
-i7: localStorage.getItem("i_7"),
-i8: localStorage.getItem("i_8"),
-i9: localStorage.getItem("i_9"),
-i10: localStorage.getItem("i_10"),
-i11: localStorage.getItem("i_11"),
-i12: localStorage.getItem("i_12"),
-i13: localStorage.getItem("i_13"),
-i14: localStorage.getItem("i_14"),
-i15: localStorage.getItem("i_15"),
-i16: localStorage.getItem("i_16"),
-i17: localStorage.getItem("i_17"),
-i18: localStorage.getItem("i_18"),
-i19: localStorage.getItem("i_19"),
-i20: localStorage.getItem("i_20"),
-i21: localStorage.getItem("i_21"),
-i22: localStorage.getItem("i_22"),
-i23: localStorage.getItem("i_23"),
-i24: localStorage.getItem("i_24"),
-i25: localStorage.getItem("i_25"),
-i26: localStorage.getItem("i_26"),
-i27: localStorage.getItem("i_27"),
-i28: localStorage.getItem("i_28"),
-i29: localStorage.getItem("i_29"),
-i30: localStorage.getItem("i_30"),
-i31: localStorage.getItem("i_31"),
-i32: localStorage.getItem("i_32")
+	juego: "2",
+id:	localStorage.getItem("id"),
+i1: localStorage.getItem("i1"+localStorage.getItem('curso')),
+i2: localStorage.getItem("i2"+localStorage.getItem('curso')),
+i3: localStorage.getItem("i3"+localStorage.getItem('curso')),
+i4: localStorage.getItem("i4"+localStorage.getItem('curso')),
+i5: localStorage.getItem("i5"+localStorage.getItem('curso')),
+i6: localStorage.getItem("i6"+localStorage.getItem('curso')),
+i7: localStorage.getItem("i7"+localStorage.getItem('curso')),
+i8: localStorage.getItem("i8"+localStorage.getItem('curso')),
+i9: localStorage.getItem("i9"+localStorage.getItem('curso')),
+i10: localStorage.getItem("i10"+localStorage.getItem('curso')),
+i11: localStorage.getItem("i11"+localStorage.getItem('curso')),
+i12: localStorage.getItem("i12"+localStorage.getItem('curso')),
+i13: localStorage.getItem("i13"+localStorage.getItem('curso')),
+i14: localStorage.getItem("i14"+localStorage.getItem('curso')),
+i15: localStorage.getItem("i15"+localStorage.getItem('curso')),
+i16: localStorage.getItem("i16"+localStorage.getItem('curso')),
+i17: localStorage.getItem("i17"+localStorage.getItem('curso')),
+i18: localStorage.getItem("i18"+localStorage.getItem('curso')),
+i19: localStorage.getItem("i19"+localStorage.getItem('curso')),
+i20: localStorage.getItem("i20"+localStorage.getItem('curso')),
+i21: localStorage.getItem("i21"+localStorage.getItem('curso')),
+i22: localStorage.getItem("i22"+localStorage.getItem('curso')),
+i23: localStorage.getItem("i23"+localStorage.getItem('curso')),
+i24: localStorage.getItem("i24"+localStorage.getItem('curso')),
+i25: localStorage.getItem("i25"+localStorage.getItem('curso')),
+i26: localStorage.getItem("i26"+localStorage.getItem('curso')),
+i27: localStorage.getItem("i27"+localStorage.getItem('curso')),
+i28: localStorage.getItem("i28"+localStorage.getItem('curso')),
+i29: localStorage.getItem("i29"+localStorage.getItem('curso')),
+i30: localStorage.getItem("i30"+localStorage.getItem('curso')),
+i31: localStorage.getItem("i31"+localStorage.getItem('curso')),
+i32: localStorage.getItem("i32"+localStorage.getItem('curso'))
 };
 console.log(JSON.stringify(request));
 
-$.ajax({
+.ajax({
     data: JSON.stringify(request),
     type: "POST",
     contentType: "application/json",
