--- a/Story/h60.html
+++ b/Story/h60.html
@@ -1,9 +1,10 @@
-<!doctype html> 
-<html lang="en"> 
-<head> 
+<!doctype html>
+<html lang="en">
+<head>
 	<meta charset="UTF-8" />
 	<title>Cómic Pensamiento Crítico 2</title>
     <script src="phaser.min.js"></script>
+		<script src="jquery-latest.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -13,7 +14,7 @@
 <body>
 
 <script type="text/javascript">
-    
+
 var game = new Phaser.Game(800, 600, Phaser.CANVAS, 'phaser-example', { preload: preload, create: create, update: update, render: render});
 
 var ill;
@@ -29,7 +30,7 @@ var voice_button_p;
 
 function preload() {
     game.load.audio('voice', 'assetsAudio/h60.mp3');
-    game.load.image('ill', 'assetsImg/h60.png');   
+    game.load.image('ill', 'assetsImg/h60.png');
     game.load.spritesheet('left', 'assetsImg/arrowleft_2.png',90,90);
     game.load.spritesheet('right', 'assetsImg/arrowright_2.png',89,89);
     game.load.spritesheet('voice_button', 'assetsImg/button_voice3_50.png', 50, 50);
@@ -38,7 +39,7 @@ function preload() {
     right_p=[700, 250];
     voice_button_p= [380, 525];
 }
-function create() {    
+function create() {
     game.stage.backgroundColor = "#FFFFFF";
     ill=game.add.sprite(game.world.centerX, game.world.centerY, 'ill');
     ill.anchor.setTo(0.5);
@@ -63,6 +64,68 @@ function update(){
 }
 function render(){
 }
+
+var request = {
+
+id:	localStorage.getItem("id"),
+i1: localStorage.getItem("i1"+localStorage.getItem('curso')),
+i2: localStorage.getItem("i2"+localStorage.getItem('curso')),
+i3: localStorage.getItem("i3"+localStorage.getItem('curso')),
+i4: localStorage.getItem("i4"+localStorage.getItem('curso')),
+i5: localStorage.getItem("i5"+localStorage.getItem('curso')),
+i6: localStorage.getItem("i6"+localStorage.getItem('curso')),
+i7: localStorage.getItem("i7"+localStorage.getItem('curso')),
+i8: localStorage.getItem("i8"+localStorage.getItem('curso')),
+i9: localStorage.getItem("i9"+localStorage.getItem('curso')),
+i10: localStorage.getItem("i10"+localStorage.getItem('curso')),
+i11: localStorage.getItem("i11"+localStorage.getItem('curso')),
+i12: localStorage.getItem("i12"+localStorage.getItem('curso')),
+i13: localStorage.getItem("i13"+localStorage.getItem('curso')),
+i14: localStorage.getItem("i14"+localStorage.getItem('curso')),
+i15: localStorage.getItem("i15"+localStorage.getItem('curso')),
+i16: localStorage.getItem("i16"+localStorage.getItem('curso')),
+i17: localStorage.getItem("i17"+localStorage.getItem('curso')),
+i18: localStorage.getItem("i18"+localStorage.getItem('curso')),
+i19: localStorage.getItem("i19"+localStorage.getItem('curso')),
+i20: localStorage.getItem("i20"+localStorage.getItem('curso')),
+i21: localStorage.getItem("i21"+localStorage.getItem('curso')),
+i22: localStorage.getItem("i22"+localStorage.getItem('curso')),
+i23: localStorage.getItem("i23"+localStorage.getItem('curso')),
+i24: localStorage.getItem("i24"+localStorage.getItem('curso')),
+i25: localStorage.getItem("i25"+localStorage.getItem('curso')),
+i26: localStorage.getItem("i26"+localStorage.getItem('curso')),
+i27: localStorage.getItem("i27"+localStorage.getItem('curso')),
+i28: localStorage.getItem("i28"+localStorage.getItem('curso')),
+i29: localStorage.getItem("i29"+localStorage.getItem('curso')),
+i30: localStorage.getItem("i30"+localStorage.getItem('curso')),
+i31: localStorage.getItem("i31"+localStorage.getItem('curso')),
+i32: localStorage.getItem("i32"+localStorage.getItem('curso')),
+juego: "2"
+};
+console.log(JSON.stringify(request));
+
+$.ajax({
+    data: JSON.stringify(request),
+    type: "POST",
+    contentType: "application/json",
+    url: "../receive_data.php"
+})
+ .done(
+
+   function( data, textStatus, jqXHR ) {
+     if ( console && console.log ) {
+         console.log( "La solicitud se ha completado correctamente." );
+				 console.log( "La solicitud se ha completado correctamente."+textStatus );
+				 console.log( "La solicitud se ha completado correctamente."+jqXHR.responseText);
+     }
+ })
+ .fail(function( jqXHR, textStatus, errorThrown, XHR ) {
+     if ( console && console.log ) {
+         console.log( "La solicitud ha fallado: " +  textStatus);
+         console.log( "La solicitud ha fallado: " +  errorThrown);
+         console.log( "La solicitud ha fallado: " +  jqXHR.responseText);
+     }
+});
 </script>
 
 </body>
