--- a/FindTheOdd/f11.html
+++ b/FindTheOdd/f11.html
@@ -44,7 +44,7 @@ function preload() {
     game.load.spritesheet('voice_button', 'assetsImg/button_voice3_50.png', 50, 50);
     game.load.spritesheet('A', 'assetsImg/f11a.png', 350 , 79 );
     game.load.spritesheet('B', 'assetsImg/f11b.png', 350 , 79 );
-    game.load.spritesheet('C', 'assetsImg/f11c.png', 350 , 80 );
+    game.load.spritesheet('C', 'assetsImg/f11c_3.png', 350 , 79 );
     ill_p=[game.world.centerX, game.world.centerY];
     left_p=[0, 250];
     right_p=[700, 250];
