--- a/FindTheOdd/f11_1.html
+++ b/FindTheOdd/f11_1.html
@@ -59,7 +59,7 @@ function play_sound(){
 }
 
 function goLeft(){
-    window.open("h59.html", "_self");
+    window.open("f11.html", "_self");
 }
 function goRight(){
     window.open("../Story/h60.html", "_self");
