--- a/Mechanism/part3_ins.html
+++ b/Mechanism/part3_ins.html
@@ -909,8 +909,8 @@ function render() {
     // game.debug.text('activePointer:'+game.input.activePointer.worldX+" "+game.input.activePointer.worldY, 32, 80, 'rgb(0,0,0)')
     // game.debug.text('current tile:'+mapCopy[layer1.getTileX(game.input.activePointer.worldX)][layer1.getTileY(game.input.activePointer.worldY)], 32, 64, 'rgb(0,0,0)');
 
-    if(celda1contentbool)
-      game.debug.text('1', 32, 80, 'rgb(0,0,0)')
+    // if(celda1contentbool)
+    //   game.debug.text('1', 32, 80, 'rgb(0,0,0)')
 
 }
 
