--- a/DetermineWeight/termometer.html
+++ b/DetermineWeight/termometer.html
@@ -192,7 +192,7 @@ function reloadTable(){
 	checkfull();
 }
 function checkfull(){
-	if (table.measures>=2 && localStorage.getItem('i24'+localStorage.getItem("curso"))=="no contestada"){
+	if (table.measures>=2){
 		localStorage.setItem('i24'+localStorage.getItem("curso"), '1');
 	}
 	if (table.measures>=3){
@@ -218,15 +218,27 @@ function update(){
 }
 function onTouch(obj1, rule0){
 	if (rule0.overlap(block1) && obj1.overlap(block1) && !measure1.blockused){
-    	var text = game.add.text(textA_p[0], textA_p[1], textTank(obj1), style);
+			obj1.x=60;
+			obj1.y=250;
+			rule0.x=60;
+			rule0.y=365;
+			var text = game.add.text(textA_p[0], textA_p[1], textTank(obj1), style);
     	doMeasure(measure1, obj1, rule0, text);
 			text21 = game.add.text(70, 465,textTank(obj1), style2);
 	} else if(rule0.overlap(block2)&& obj1.overlap(block2) && !measure2.blockused){
-    	var text = game.add.text(textB_p[0], textB_p[1], textTank(obj1), style);
+			obj1.x=230;
+			obj1.y=250;
+			rule0.x=230;
+			rule0.y=365;
+			var text = game.add.text(textB_p[0], textB_p[1], textTank(obj1), style);
     	doMeasure(measure2, obj1, rule0, text);
 			text22 = game.add.text(240, 465,textTank(obj1), style2);
 	} else if(rule0.overlap(block3)&& obj1.overlap(block3) && !measure3.blockused){
-    	var text = game.add.text(textC_p[0], textC_p[1], textTank(obj1), style);
+			obj1.x=400;
+			obj1.y=250;
+			rule0.x=400;
+			rule0.y=365;
+			var text = game.add.text(textC_p[0], textC_p[1], textTank(obj1), style);
     	doMeasure(measure3, obj1, rule0, text);
 			text23 = game.add.text(410, 465,textTank(obj1), style2);
 	}else {
