--- a/Mechanism/start1-2.html
+++ b/Mechanism/start1-2.html
@@ -14,7 +14,7 @@
 
 <script type="text/javascript">
     
-var game = new Phaser.Game(800, 600, Phaser.AUTO, 'phaser-example', { preload: preload, create: create, update: update, render: render});
+var game = new Phaser.Game(800, 600, Phaser.CANVAS, 'phaser-example', { preload: preload, create: create, update: update, render: render});
 var ill1;
 var ill2;
 var ill3;
