--- a/Questions/q1.html
+++ b/Questions/q1.html
@@ -39,31 +39,31 @@ var C_p;
 
 
 function preload() {
-    game.load.audio('voice', 'assetsAudio/q1.mp3');
-    game.load.image('ill', 'assetsImg/q1.png');
+    game.load.audio('voice', 'assetsAudio/q1_2.mp3');
+    game.load.image('ill', 'assetsImg/q1_3.png');
     game.load.spritesheet('left', 'assetsImg/arrowleft_2.png',90,90);
     game.load.spritesheet('right', 'assetsImg/arrowright_2.png',89,89);
     game.load.spritesheet('voice_button', 'assetsImg/button_voice3_50.png', 50, 50);
     game.load.spritesheet('back_button', 'assetsImg/back_story.png', 162, 81);
-    game.load.spritesheet('A', 'assetsImg/q1a.png', 380 , 80 );
-    game.load.spritesheet('B', 'assetsImg/q1b.png', 380 , 80 );
-    game.load.spritesheet('C', 'assetsImg/q1c.png', 380 , 80 );
-    ill_p=[game.world.centerX, game.world.centerY];
-    left_p=[0, 250];
-    right_p=[700, 250];
-    voice_button_p= [380, 525];
-    back_button_p=[200, 500];
-    A_p=[ game.world.centerX-80, game.world.centerY-60];
-    B_p=[ game.world.centerX-80, game.world.centerY+20];
-    C_p=[ game.world.centerX-80, game.world.centerY+100];
+    game.load.spritesheet('A', 'assetsImg/q1a_2.png', 380 , 80 );
+    game.load.spritesheet('B', 'assetsImg/q1b_2.png', 380 , 80 );
+    game.load.spritesheet('C', 'assetsImg/q1c_2.png', 380 , 80 );
+    ill_p=[0, 0];
+    left_p=[0, 500];
+    right_p=[700, 500];
+    voice_button_p= [450, 525];
+    back_button_p=[250, 500];
+    A_p=[ game.world.centerX+170, game.world.centerY-60];
+    B_p=[ game.world.centerX+170, game.world.centerY+20];
+    C_p=[ game.world.centerX+170, game.world.centerY+100];
     A_press=false;
     B_press=false;
     C_press=false;
 }
 function create() {
     game.stage.backgroundColor = "#FFFFFF";
-    ill=game.add.sprite(game.world.centerX, game.world.centerY, 'ill');
-    ill.anchor.setTo(0.5);
+    ill=game.add.sprite(0, 0, 'ill');
+    // ill.anchor.setTo(0.5);
     voice=game.add.audio('voice');
     voice.play();
     left=game.add.button(left_p[0], left_p[1], 'left', goLeft, this, 0);
@@ -73,10 +73,14 @@ function create() {
     back_button=game.add.button(back_button_p[0], back_button_p[1], 'back_button', goBack, this, 0);
     A= game.add.button(A_p[0], A_p[1],'A', AnsA, this, 0);
     A.anchor.setTo(0.5);
+		A.scale.setTo(0.9,0.9);
+
     B= game.add.button(B_p[0], B_p[1],'B', AnsB, this, 0);
     B.anchor.setTo(0.5);
     C= game.add.button(C_p[0], C_p[1],'C', AnsC, this, 0);
     C.anchor.setTo(0.5);
+		B.scale.setTo(0.9,0.9);
+		C.scale.setTo(0.9,0.9);
 
     if(localStorage.getItem("bad")=="1"){
         left.visible=false;
@@ -101,7 +105,7 @@ function AnsC(){
     C_press=true;
 }
 function goLeft(){
-    window.open("q0.html", "_self");
+    window.open("../Story/h38.html", "_self");
 }
 function goRight(){
     if(A_press){
