--- a/Questions/q4.html
+++ b/Questions/q4.html
@@ -39,8 +39,8 @@ var C_p;
 
 
 function preload() {
-    game.load.audio('voice', 'assetsAudio/q4.mp3');
-    game.load.image('ill', 'assetsImg/q4.png');
+    game.load.audio('voice', 'assetsAudio/q4_2.mp3');
+    game.load.image('ill', 'assetsImg/q4_2.png');
     game.load.spritesheet('left', 'assetsImg/arrowleft_2.png',90,90);
     game.load.spritesheet('right', 'assetsImg/arrowright_2.png',89,89);
     game.load.spritesheet('voice_button', 'assetsImg/button_voice3_50.png', 50, 50);
