--- a/Questions/q6.html
+++ b/Questions/q6.html
@@ -39,15 +39,15 @@ var C_p;
 
 
 function preload() {
-    game.load.audio('voice', 'assetsAudio/q6.mp3');
-    game.load.image('ill', 'assetsImg/q6.png');
+    game.load.audio('voice', 'assetsAudio/q6_2.mp3');
+    game.load.image('ill', 'assetsImg/q6_2.png');
     game.load.spritesheet('left', 'assetsImg/arrowleft_2.png',90,90);
     game.load.spritesheet('right', 'assetsImg/arrowright_2.png',89,89);
     game.load.spritesheet('voice_button', 'assetsImg/button_voice3_50.png', 50, 50);
     game.load.spritesheet('back_button', 'assetsImg/back_story.png', 162, 81);
     game.load.spritesheet('A', 'assetsImg/q6a.png', 380 , 80 );
     game.load.spritesheet('B', 'assetsImg/q6b_3.png', 380 , 80 );
-    game.load.spritesheet('C', 'assetsImg/q6c.png', 380 , 80 );
+    game.load.spritesheet('C', 'assetsImg/q6c_2.png', 380 , 80 );
     ill_p=[game.world.centerX, game.world.centerY];
     left_p=[0, 250];
     right_p=[700, 250];
