--- a/Mechanism/part3_ins.html
+++ b/Mechanism/part3_ins.html
@@ -821,9 +821,9 @@ function waterPath()
             }
         }
 
-        if(end1)
-            localStorage.setItem('i17','1');
-        // else
+        // if(end1)
+        //     rage.setItem('i17','1');
+        // // else
         //     openPopupL();
 
         waterPathBool=true;
@@ -1310,7 +1310,7 @@ function buttonPipe6Bool()
 
 function buttonErase()
 {
-  localStorage.setItem('i32'+localStorage.getItem("curso"),'1');
+  // localStorage.setItem('i32'+localStorage.getItem("curso"),'1');
   buttondigbool=false;
   buttonpipe1bool=false;
   buttonpipe2bool=false;
