--- a/Story/h0.html
+++ b/Story/h0.html
@@ -1,6 +1,6 @@
-<!doctype html> 
-<html lang="en"> 
-<head> 
+<!doctype html>
+<html lang="en">
+<head>
 	<meta charset="UTF-8" />
 	<title>Cómic Pensamiento Crítico 2</title>
     <script src="phaser.min.js"></script>
@@ -13,8 +13,9 @@
 <body>
 
 <script type="text/javascript">
-    
+// Phaser.StageScaleMode.EXACT_FIT = 0;Phaser.StageScaleMode.NO_SCALE = 1;Phaser.StageScaleMode.SHOW_ALL = 2;
 var game = new Phaser.Game(800, 600, Phaser.CANVAS, 'phaser-example', { preload: preload, create: create, update: update, render: render});
+// game.stage.scaleMode = Phaser.StageScaleMode.NO_SCALE;
 
 var ill;
 var left;
@@ -29,7 +30,7 @@ var voice_button_p;
 
 function preload() {
     game.load.audio('voice', 'assetsAudio/h0.mp3');
-    game.load.image('ill', 'assetsImg/h0.png');   
+    game.load.image('ill', 'assetsImg/h0.png');
     game.load.spritesheet('left', 'assetsImg/arrowleft_2.png',90,90);
     game.load.spritesheet('right', 'assetsImg/arrowright_2.png',89,89);
     game.load.spritesheet('voice_button', 'assetsImg/button_voice3_50.png', 50, 50);
@@ -38,7 +39,7 @@ function preload() {
     right_p=[700, 250];
     voice_button_p= [380, 525];
 }
-function create() {    
+function create() {
     game.stage.backgroundColor = "#FFFFFF";
     ill=game.add.sprite(game.world.centerX, game.world.centerY, 'ill');
     ill.anchor.setTo(0.5);
